version/0.1/_sources/api/ansys/sam/sysml2/classes/project/Project.rst.txt






:class:`Project`
================


.. py:class:: ansys.sam.sysml2.classes.project.Project

   
   Provides the project interface for users.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: Project

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~get_root`
            - Get a list of root packages.
          * - :py:attr:`~get_root_package`
            - Get the root package.
          * - :py:attr:`~find_element_by_id`
            - Find an element by ID.
          * - :py:attr:`~find_elements_by_name`
            - Find all elements by name.








Import detail
-------------

.. code-block:: python

    from ansys.sam.sysml2.classes.project import Project



Method detail
-------------

.. py:method:: get_root() -> List[ansys.sam.sysml2.classes.sysml_element.SysMLElement]

   
   Get a list of root packages.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_root_package() -> ansys.sam.sysml2.classes.sysml_element.SysMLElement

   
   Get the root package.
















   ..
       !! processed by numpydoc !!

.. py:method:: find_element_by_id(element_id: str) -> ansys.sam.sysml2.classes.sysml_element.SysMLElement

   
   Find an element by ID.


   :Parameters:

       **element_id** : :class:`python:str`
           Element ID.



   :Returns:

       :obj:`SysMLElement`
           Element retrieved.











   ..
       !! processed by numpydoc !!

.. py:method:: find_elements_by_name(elements_name: str) -> List[ansys.sam.sysml2.classes.sysml_element.SysMLElement]

   
   Find all elements by name.


   :Parameters:

       **elements_name** : :class:`python:str`
           Name of elements.



   :Returns:

       :obj:`List`\[:obj:`SysMLElement`]
           List of elements retrieved.











   ..
       !! processed by numpydoc !!




